Changes to be committed: modified:   app.py new file:   our_k.key new file:   psswords.db modified:   templates/buscador_pag.html modified:   templates/contrasenias_enternew.html modified:   templates/index.html renamed:    templates/list.html -> templates/seach.html

--- a/templates/contrasenias_enternew.html
+++ b/templates/contrasenias_enternew.html
@@ -24,10 +24,10 @@
         <h2 class="titulo">Add new page</h2>
         
         <br >
-        <input type="text" name="usu" id="usu" placeholder="User" /></br>
+        <input type="text" name="usu" id="usu" placeholder="User" maxlength="50" /></br>
 
         <br>
-        <input type="text" name="pag" id="usu" placeholder="Page"/></br>
+        <input type="text" name="pag" id="usu" placeholder="Page" maxlength="50"/></br>
 
 
         <input type="submit" value="Upload" /><br>
