--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
         </li>
         <li ><a href="http://127.0.0.1:8000/actualizar">Update passwords</a>
         </li>
-        <li ><a href="http://127.0.0.1:8000/list">Search</a>
+        <li ><a href="http://127.0.0.1:8000/seach">Search</a>
         <li ><a id="borrar" onclick=formulario() type="submit">Delete</a>
         
     </ul>
