--- a/templates/seach.html
+++ b/templates/seach.html
@@ -41,7 +41,7 @@
       <form action="#" method="POST">
          <h2 class="titulo">Page search</h2>
          <br class="in_put">
-         <input type="text" name="pag" id="pag" placeholder="Page"/></br>
+         <input type="text" name="pag" id="pag" placeholder="Page" maxlength="50"/></br>
  
          <input type="submit" value="Search" /><br>
      </form>
