Changes to be committed: modified:   __pycache__/main.cpython-310.pyc modified:   main.py modified:   our_k.key modified:   password/__pycache__/funtion_pss.cpython-310.pyc modified:   password/funtion_pss.py modified:   psswords.db modified:   static/css/layout.css modified:   static/js/layout.js modified:   templates/index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,11 @@
 {% extends './layout.html' %}
 
 {% block title %}
+<center>
 
-<center><h1 class="banner">Psswords</h1> </center>
+<head></head><h1 class="banner">Psswords</h1></head>
+
+</center>
 
 {% endblock %}
 
@@ -16,7 +19,7 @@
         <li ><a href="http://127.0.0.1:8000/actualizar">Update passwords</a>
         </li>
         <li ><a href="http://127.0.0.1:8000/seach">Search</a>
-        <li ><a id="borrar" onclick=formulario() type="submit">Delete</a>
+        <button><a id="borrar" onclick=formulario() type="submit">Delete</a>
         
     </ul>
 
@@ -45,9 +48,7 @@
         
     </center>
 
-    <a id="ej">
-            
-        </a>
+    <a id="ej"> </a>
 
    
 
