--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -47,10 +47,10 @@ input {
 }
 
 button{
-    background-color: blanchedalmond;
-    padding: 7px;
+    background-color: rgb(255, 255, 255);
+    padding: 0px;
     border: none;
-    border-radius: 4px;
+    border-radius: 1px;
     cursor: pointer;
 }
 
@@ -71,6 +71,9 @@ table th {
     width: 100%;
     height: 50px;
     padding-top: 10px;
+    font-weight: bold;
+    font-family: 'Lucida Console', Monaco, monospace;
+   
 }
 
 .btn  {
@@ -127,3 +130,4 @@ li a:hover{
 .fa{
     margin-right: 20px;
 }
+
