Changes to be committed: new file:   password/__pycache__/usb.cpython-310.pyc modified:   requirements.txt modified:   static/css/layout.css modified:   static/js/layout.js modified:   templates/buscador_pag.html modified:   templates/seach.html

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -131,3 +131,16 @@ li a:hover{
     margin-right: 20px;
 }
 
+.PAGINA {
+    padding: 10px;
+    border: none;
+    border-radius: 1px;
+}
+
+.PAGINA:hover {
+    padding-bottom: 10px;
+    padding-top: 10px;
+    text-decoration:none;
+    color:#d1d5d3;
+    cursor:pointer;
+  }
