--- a/templates/buscador_pag.html
+++ b/templates/buscador_pag.html
@@ -15,14 +15,14 @@
     </ul>
     </div>
 
-    <form action="#" method="POST">
+    <form name="buscar" action="#" method="POST">
         <h2 class="titulo">Page search</h2>
         <br>
-        <input type="text" name="pag" id="pag" placeholder="Page" maxlength="50"/></br>
-
-        <input type="submit" value="Search" /><br>
+        <input class="search" type="text"  placeholder="Page" maxlength="50"/></br>
+        <li class="suggestions"></li>
+        <!-- <input type="submit" value="Search" /><br> -->
     </form>
 
-
+    <!-- name="pag" id="pag" -->
 
 {% endblock %}
