--- a/templates/seach.html
+++ b/templates/seach.html
@@ -38,12 +38,13 @@
       </table>
 
 
-      <form action="#" method="POST">
+  
+      <form name="buscar" action="#" method="POST">
          <h2 class="titulo">Page search</h2>
-         <br class="in_put">
-         <input type="text" name="pag" id="pag" placeholder="Page" maxlength="50"/></br>
- 
-         <input type="submit" value="Search" /><br>
+         <br>
+         <input class="search" type="text"  placeholder="Page" maxlength="50"/></br>
+         <li class="suggestions"></li>
+         <!-- <input type="submit" value="Search" /><br> -->
      </form>
  
      
