--- a/templates/buscador_pag.html
+++ b/templates/buscador_pag.html
@@ -22,7 +22,15 @@
         <li class="suggestions"></li>
         <!-- <input type="submit" value="Search" /><br> -->
     </form>
-
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+          document.querySelectorAll('input[type=text]').forEach( node => node.addEventListener('keypress', e => {
+            if(e.keyCode == 13) {
+              e.preventDefault();
+            }
+          }))
+        });
+      </script>
     <!-- name="pag" id="pag" -->
 
 {% endblock %}
