--- a/templates/seach.html
+++ b/templates/seach.html
@@ -48,8 +48,18 @@
      </form>
  
      
- 
+     <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        document.querySelectorAll('input[type=text]').forEach( node => node.addEventListener('keypress', e => {
+          if(e.keyCode == 13) {
+            e.preventDefault();
+          }
+        }))
+      });
+    </script>
+    
    </body>
 </html>
+
 
 {% endblock %}
