Changes to be committed: new file:   our_k.key new file:   psswords.db new file:   psswords_backup.db modified:   static/css/layout.css modified:   templates/buscador_pag.html modified:   templates/contrasenias_enternew.html modified:   templates/index.html modified:   templates/seach.html

--- a/templates/contrasenias_enternew.html
+++ b/templates/contrasenias_enternew.html
@@ -3,7 +3,7 @@
 
 {% block title %}
 
-<center><h1 class="banner">Psswords</h1> </center>
+<center><h1 class="banner">PSSWORDS</h1> </center>
 
 {% endblock %}
 
