--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}
 <center>
 
-<head></head><h1 class="banner">Psswords</h1></head>
+<header><h1  class="banner">PSSWORDS</h1></header>
 
 </center>
 
