--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -1,10 +1,11 @@
-tr:nth-child(even) {
+/* tr:nth-child(even) {
     background-color: #f2f2f2;
-}
+} */
 tr:hover {
-    
-    background-color: rgb(226, 221, 214);
-    
+    background-color: rgba(247, 245, 242, 0.151);
+    cursor: pointer;
+    /* font-weight: 900; */
+
 }
 :-webkit-scrollbar {
     width: 10px;
@@ -16,17 +17,27 @@ tr:hover {
 } 
 body{
     height:200%;
-    background-color: rgb(255, 253, 248);
+    background-color: rgb(30, 30, 30);
+    /* background: linear-gradient(90deg, rgb(234, 234, 234) 0%, rgb(121, 145, 150) 100%); */
+    /* background: rgb(37, 38, 49);
+    background: radial-gradient(circle, rgb(214, 216, 227) 0%, rgb(7, 10, 15) 100%); */
 }
 
 form {
-    background-color:rgb(152, 172, 173);
+    /* background-color:rgb(152, 172, 173); */
+    background: rgba(154, 155, 157, 0.205);
     padding: 10px;
     width: 400px;
-    font-weight:bold;
+    /* font-weight:bold; */
     color:white;
     margin:30px;
-    border-radius:30px;
+    border-radius:5px;
+    /* box-shadow: 4px 4px rgba(0, 0, 0, 0.106); */
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
    }
 
 
@@ -55,26 +66,54 @@ button{
 }
 
 table th {
-    font-size: 1.1em;
+    /* font-size: 1.1em; */
     text-align: center;
-    font-weight: bold;
+    /* font-weight: bold; */
     color: #FFFFFF;
-    background: rgb(152, 172, 173);
-    border-radius: 6px;
+   
+    caption-side: top;
+    /* background: rgb(136, 154, 154); */
+    background: rgba(154, 155, 157, 0.205);
     border: 100px;
-    padding: 6px;
+    padding: 4px;
+    width: 25%;
+    
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 0 0 1em 0;
+    caption-side: top;}
+
+table td{
+    color: #fff;
+    text-align: center;
+    border-right: 0px ;
+    border-bottom: 1px solid rgb(255, 255, 255);
 }
 
 
 .banner{
-    color:black;
+    color:rgb(240, 240, 240);
     width: 100%;
     height: 50px;
-    padding-top: 10px;
-    font-weight: bold;
-    font-family: 'Lucida Console', Monaco, monospace;
-   
+    font-size: 50px;
+    font-weight: 900;
+    font-family: "Times New Roman", Times, serif;
+    
 }
+/* .content-table{
+    border-spacing: 3px;
+} */
+/* header{
+    background-color: rgba(255, 253, 253, 0.118);
+    background-size: contain;
+    width: 101%;
+    height: 100%;
+    
+}  */
+
 
 .btn  {
     display:inline;
@@ -116,9 +155,10 @@ li{
 }
 
 li a{
-    background: rgb(72, 81, 83); 
+    /* background: rgb(72, 81, 83);  */
+    background: rgb(108, 108, 108);
     color:#ffffff;
-    border-radius:10px;
+    border-radius:5px;
 }
 
 li a:hover{
@@ -135,7 +175,7 @@ li a:hover{
     padding: 10px;
     border: none;
     border-radius: 1px;
-    padding-left:175px ;
+    /* padding-left:175px ; */
     display:block;
     
 }
@@ -144,8 +184,10 @@ li a:hover{
     padding-bottom: 4px;
     padding-top: 4px;
     text-decoration:none;
-    color:#8dcbfa;
-    background-color: #35393cb4;
+    /* color:#8dcbfa;
+    background-color: #35393cb4; */
+    color:#b9efee;
+    background-color: #dee1e348;
     cursor:pointer;
     border-radius: 6px;
     border: 100px;
