--- a/templates/seach.html
+++ b/templates/seach.html
@@ -2,7 +2,7 @@
 
 {% block title %}
 
-<center><h1 class="banner">Psswords</h1> </center>
+<center><h1 class="banner">PSSWORDS</h1> </center>
 
 {% endblock %}
 
