Changes to be committed: 	modified:   __pycache__/main.cpython-310.pyc 	modified:   app.py 	modified:   main.py 	modified:   password/DB.py 	modified:   password/__pycache__/DB.cpython-310.pyc 	modified:   psswords.db 	modified:   psswords_backup.db 	modified:   static/css/layout.css 	modified:   static/js/layout.js 	new file:   templates/edit.html 	modified:   templates/index.html 	new file:   test.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,8 @@
         <li ><a href="http://127.0.0.1:8000/actualizar">Update passwords</a>
         </li>
         <li ><a href="http://127.0.0.1:8000/seach">Search</a>
-        <button><a id="borrar" onclick=formulario() type="submit">Delete</a>
+        <button id="borrar" onclick=formulario() type="submit">Delete</button>
+        <button id="editar" onclick=formulario_edit() type="submit">Edit</button>
         
     </ul>
 
