--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -58,12 +58,23 @@ input {
 }
 
 button{
-    background-color: rgb(255, 255, 255);
-    padding: 0px;
-    border: none;
-    border-radius: 1px;
+    background: rgb(108, 108, 108);
+    color:#ffffff;
+    border-radius:5px;
     cursor: pointer;
+    border: none;
+    text-decoration: none; 
+    font-size: 15px;
+    font-family: sans-serif;
+    padding: 10px 10px;
 }
+
+
+button:hover{
+    background:#809caa;  
+    color:#fff;
+
+    }
 
 table th {
     /* font-size: 1.1em; */
