Changes to be committed: 	modified:   app.py 	modified:   password/__pycache__/DB.cpython-310.pyc 	modified:   password/__pycache__/clas.cpython-310.pyc 	modified:   password/clas.py 	modified:   templates/not_key.html

--- a/templates/not_key.html
+++ b/templates/not_key.html
@@ -16,8 +16,9 @@
 
 
     <p class="Error">
-        <span>ERROR NOT KEY FOUND!</span>
-        
+        <span>ERROR NOT KEY FOUND!</span> 
     </p>
 
+    <li ><a href="{{ url_for('generatekey') }}">Make a new key</a></li>
+   
 {% endblock %}
